fixed a content-overflow visual bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,15 @@
 
 body {
     margin: 0;
-    min-height: 100svh;
+    min-height: 100vh;
+    max-height: 100vh;
     padding: 1px;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 #canvas {
     flex-grow: 1;
+    flex-shrink: 1;
 }
